# loss-lens

./: .gitignore  README.md  docker-compose.yaml
server/calculate/: .gitattributes  README.md  calculate_cnn_mnist_store_to_file.py  calculate_torchvision_cifar10.py  calculate_torchvision_cifar10_layer_similarity.py  calculate_torchvision_cifar10_loss_landscapes_3d.py  calculate_torchvision_cifar10_model_evaluation.py  calculate_torchvision_cifar10_training_loss.py  calculate_vit_cifar10_layer_similarity.py  calculate_vit_cifar10_prediction_distribuation.py  calculate_vit_cifar10_training_loss_3d.py  delete_document.py  drop_collection.py  load_from_csv_persistantdiagram.py  load_from_csv_persistantdiagram_training.py  pyproject.toml  run_drop_collection_nersc.sh  run_load_from_csv_mergetree_nersc.sh  run_load_from_csv_persistantdiagram.sh  run_model_calculations_nersc.sh  run_on_nersc.sh  test_cnn_mnist.py  transfer_image_mnist.py
server/calculate/data_generation_scripts/: case_study_pinn.py  case_study_pinn_100.py  case_study_pinn_placeholder.py  case_study_vit_placeholder.py
server/calculate/database/: README.md  credential.json  functions.py
server/calculate/operation/: functions.py
server/calculate/script_util/: calculate_ttk_merge_tree.py  calculate_ttk_merge_tree_planar.py  compute_pinn_loss_landscape.py  core_functions.py  core_functions_placeholder.py  mc_to_db.py  read_csv_to_db.py  ttk_functions.py  turn_landscape_to_csv.py  turn_landscape_to_csv.sh  update_db_placeholder.py
server/calculate/training_scripts/: MLPSmall.py
(+522 files in other folders)
