[tool.poetry]
name = "calculate"
version = "0.1.0"
description = ""
authors = ["Tiankai Xie <42656139+tiankaixie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.2"
pyevtk = "^1.6.0"
pyhessian = "^0.1"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
llvmlite = "^0.43.0"
numba = "^0.60.0"
pynndescent = "^0.5.13"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
